# xtu-edu

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
xtu/: __init__.py  api.py  const.py
